# openpiv-python-gpu

./: .gitignore  Openpiv_Python_Cython_GPU_demo.ipynb  Openpiv_Python_Cython_GPU_demo_Oct2020.ipynb  Openpiv_Python_Tutorial.ipynb  Openpiv_Python_Tutorial_Advanced.ipynb  Openpiv_Python_Tutorial_Basic.ipynb  README.md  TODO  TODO.md  data_analysis.py  install.sh  job_run.py  mask.npy  multiprocess.py  piv_tools.py  pyproject.toml  requirements.txt  runtime_metric_obj.json  scrape_json.py  setup.py  start_script.sh
.github/workflows/: build.yml  publish-to-test-pypi.yml  testing.yml
openpiv/: gpu_misc.py  gpu_mp.py  gpu_process.py  gpu_process.pyx  gpu_smoothn.py  gpu_validation.py  gpu_validation.pyx  lib.pyx  multiprocess.py  preprocess.py  process.pyx  pyprocess3D.py  smoothn.py  tools.py  validation.py  windef.py
openpiv/examples/notebooks/: openpiv_gifs.ipynb  tutorial_multipass.md  vonKarman_pivlab_with_openpiv.ipynb  window_deformation_comparison.md
openpiv/examples/test_widim/: test_widim.py
openpiv/gpu/: __init__.py  misc.py  mp.py  process.py  smoothn.py  validation.py
openpiv/src/: gpu_process.c  gpu_process.pyx  process.pyx
openpiv/test/: test_gpu_misc.py  test_gpu_process.py  test_gpu_smoothn.py  test_gpu_validation.py
openpiv/test/gpu/: conftest.py  test_gpu_misc.py  test_gpu_mp.py  test_gpu_process.py  test_gpu_smoothn.py  test_gpu_validation.py  test_misc.py  test_mp.py  (+3 more)
openpiv/tutorials/: openpiv_python_gpu_tutorial_basic.ipynb
synimage/: synimagegen.py
test_util/: IWarrange.py  correlation_speedtest.py  gpuFFT.py  plotter.py
(+104 files in other folders)
