[build-system]
requires = [
    # The minimum setuptools version is specific to the PEP 517 backend,
    # and may be stricter than the version required in `setup.py`
    "setuptools>=40.6.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --benchmark-skip"
testpaths = [
    "openpiv/test",
]
